--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,22 +23,22 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #2E3336 !default;
-$examples-bg: #2E3336 !default;
-$code-bg: #1E2224 !default;
-$code-annotation-bg: #191D1F !default;
-$nav-subitem-bg: #1E2224 !default;
-$nav-active-bg: #0F75D4 !default;
-$nav-active-parent-bg: #1E2224 !default; // parent links of the current section
-$lang-select-border: #000 !default;
-$lang-select-bg: #1E2224 !default;
+$nav-bg: #2c3041 !default;
+$examples-bg: #2c3041 !default;
+$code-bg: #232634 !default;
+$code-annotation-bg: #414454 !default;
+$nav-subitem-bg: #414454 !default;
+$nav-active-bg: #23cd73 !default;
+$nav-active-parent-bg: #1ca45c !default; // parent links of the current section
+$lang-select-border: #1e212d !default;
+$lang-select-bg: #1e212d !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
 $main-bg: #F3F7F9 !default;
-$aside-notice-bg: #8fbcd4 !default;
-$aside-warning-bg: #c97a7e !default;
-$aside-success-bg: #6ac174 !default;
-$search-notice-bg: #c97a7e !default;
+$aside-notice-bg: #90CDF4 !default;
+$aside-warning-bg: #FEB2B2 !default;
+$aside-success-bg: #9AE6B4 !default;
+$search-notice-bg: #FAF089 !default;
 
 
 // TEXT COLORS
@@ -56,7 +56,8 @@ $lang-select-pressed-text: #fff !default; // color of language tab text when mou
 ////////////////////
 $nav-width: 230px !default; // width of the navbar
 $examples-width: 50% !default; // portion of the screen taken up by code examples
-$logo-margin: 0px !default; // margin below logo
+$logo-width: 80% !default; // logo width
+$logo-margin: 15px auto !default; // margin around logo
 $main-padding: 28px !default; // padding to left and right of content & examples
 $nav-padding: 15px !default; // padding to left and right of navbar
 $nav-v-padding: 10px !default; // padding used vertically around search boxes and results
