--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,7 +29,7 @@ under the License.
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel='icon' href='<%= image_path('favicon.ico') %>' type='image/x-icon'>
+    <%= favicon_tag 'favicon.ico' %>
     <meta name="theme-color" content="#23cd73">
     <title><%= current_page.data.title || "API Documentation" %> | Earmark</title>
 
